move ansible-lint to .config/ansible-lint.yml

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,10 +6,10 @@ repos:
         name: Prettier
         description: Format code with prettier
   - repo: https://github.com/ansible/ansible-lint
-    rev: v6.17.0 # put latest release tag from https://github.com/ansible/ansible-lint/releases/
+    rev: v6.17.0
     hooks:
       - id: ansible-lint
         files: \.(yaml|yml)$
         name: Ansible Lint
         description: Run linting with config from .ansible-lint file
-        args: [-c, ./ansible/.ansible-lint.yml]
+        args: [-c, .config/ansible-lint.yml]
