--- a/ansible/roles/gnome/vars/main.yml
+++ b/ansible/roles/gnome/vars/main.yml
@@ -42,7 +42,7 @@ org_gnome_dconf:
   "/org/gnome/desktop/wm/keybindings/switch-to-workspace-3": "['<Super>3']"
   "/org/gnome/desktop/wm/keybindings/switch-to-workspace-4": "['<Super>4']"
   "/org/gnome/desktop/wm/keybindings/toggle-fullscreen": "['<Super>f']"
-  "/org/gnome/desktop/wm/preferences/workspace-names": "['Info', 'Kommunikation', 'Arbeit']"
+  "/org/gnome/desktop/wm/preferences/workspace-names": "['Home', 'Kommunikation', 'Arbeit', 'Internet']"
   "/org/gnome/settings-daemon/plugins/media-keys/calculator": "['Calculator']"
   "/org/gnome/settings-daemon/plugins/media-keys/control-center": "['<Shift><Super>p']"
   "/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings": >
@@ -116,8 +116,8 @@ org_gnome_dconf:
     'jetbrains-idea.desktop:3',
     'signal-desktop.desktop:2',
     'org.telegram.desktop.desktop:2',
-    'org.keepassxc.KeePassXC.desktop:4',
-    'org.gnome.Calendar.desktop:2',
+    'org.keepassxc.KeePassXC.desktop:1',
+    'org.gnome.Calendar.desktop:1',
     'com.slack.Slack.desktop:2']
   "/org/gnome/shell/extensions/gtile/show-toggle-tiling-alt": "['<Control><Super>KP_Enter']"
   "/org/gnome/shell/extensions/gtile/theme": "'Default'"
