--- a/ansible/roles/dev_tools/tasks/main.yml
+++ b/ansible/roles/dev_tools/tasks/main.yml
@@ -37,6 +37,7 @@
   become_user: aur_builder
 
 - name: Install IntelliJ IDEA Ultimate
+  become: true
   community.general.snap:
     name: intellij-idea-ultimate
     classic: true
