--- a/ansible/group_vars/all/main.yml
+++ b/ansible/group_vars/all/main.yml
@@ -50,7 +50,7 @@ packages:
     - pipewire
     - pipewire-pulse
     - wireplumber # declared here to avoid installing pipewire-media-session
-    - youtube-dl
+    - yt-dlp
     - task # taskwarrior
     - gimp
     - xmlstarlet
