--- a/ansible/roles/gnome/vars/main.yml
+++ b/ansible/roles/gnome/vars/main.yml
@@ -23,7 +23,7 @@ org_gnome_dconf:
   "/org/gnome/desktop/interface/gtk-theme": "'Adwaita'"
   "/org/gnome/desktop/interface/icon-theme": "'Tela'"
   "/org/gnome/desktop/interface/locate-pointer": "false"
-  "/org/gnome/desktop/interface/monospace-font-name": "'RobotoMono Nerd Font Propo 10'"
+  "/org/gnome/desktop/interface/monospace-font-name": "'Hack Nerd Font Mono Regular 10'"
   "/org/gnome/desktop/interface/show-battery-percentage": "false"
   "/org/gnome/desktop/interface/text-scaling-factor": "1.25"
   "/org/gnome/desktop/interface/toolkit-accessibility": "false"
