feat: install dconf-editor with gnome

--- a/ansible/roles/gnome/tasks/main.yml
+++ b/ansible/roles/gnome/tasks/main.yml
@@ -9,6 +9,7 @@
       - seahorse # a.k.a. "Passwords and Keys"
       #      - gnome-shell-extension-gtile
       - gnome-shell-extension-appindicator
+      - dconf-editor
 
 - name: Uninstall unnecessary gnome apps
   become: true
