fix: delete conflicting keyboard hotkey

--- a/ansible/roles/gnome/vars/main.yml
+++ b/ansible/roles/gnome/vars/main.yml
@@ -42,6 +42,15 @@ org_gnome_dconf:
   "/org/gnome/desktop/wm/keybindings/switch-to-workspace-3": "['<Super>3']"
   "/org/gnome/desktop/wm/keybindings/switch-to-workspace-4": "['<Super>4']"
   "/org/gnome/desktop/wm/keybindings/toggle-fullscreen": "['<Super>f']"
+  "/org/gnome/shell/keybindings/switch-to-application-1": "@as []"
+  "/org/gnome/shell/keybindings/switch-to-application-2": "@as []"
+  "/org/gnome/shell/keybindings/switch-to-application-3": "@as []"
+  "/org/gnome/shell/keybindings/switch-to-application-4": "@as []"
+  "/org/gnome/shell/keybindings/switch-to-application-5": "@as []"
+  "/org/gnome/shell/keybindings/switch-to-application-6": "@as []"
+  "/org/gnome/shell/keybindings/switch-to-application-7": "@as []"
+  "/org/gnome/shell/keybindings/switch-to-application-8": "@as []"
+  "/org/gnome/shell/keybindings/switch-to-application-9": "@as []"
   "/org/gnome/desktop/wm/preferences/workspace-names": "['Home', 'Kommunikation', 'Arbeit', 'Internet']"
   "/org/gnome/settings-daemon/plugins/media-keys/calculator": "['Calculator']"
   "/org/gnome/settings-daemon/plugins/media-keys/control-center": "['<Shift><Super>p']"
