--- a/ansible/roles/gnome/vars/main.yml
+++ b/ansible/roles/gnome/vars/main.yml
@@ -35,12 +35,22 @@ org_gnome_dconf:
   "/org/gnome/desktop/wm/keybindings/move-to-workspace-2": "['<Shift><Super>2']"
   "/org/gnome/desktop/wm/keybindings/move-to-workspace-3": "['<Shift><Super>3']"
   "/org/gnome/desktop/wm/keybindings/move-to-workspace-4": "['<Shift><Super>4']"
+  "/org/gnome/desktop/wm/keybindings/move-to-workspace-5": "['<Shift><Super>5']"
+  "/org/gnome/desktop/wm/keybindings/move-to-workspace-6": "['<Shift><Super>6']"
+  "/org/gnome/desktop/wm/keybindings/move-to-workspace-7": "['<Shift><Super>7']"
+  "/org/gnome/desktop/wm/keybindings/move-to-workspace-8": "['<Shift><Super>8']"
+  "/org/gnome/desktop/wm/keybindings/move-to-workspace-9": "['<Shift><Super>9']"
   "/org/gnome/desktop/wm/keybindings/switch-input-source": "['<Super>k']"
   "/org/gnome/desktop/wm/keybindings/switch-input-source-backward": "['<Shift><Super>k']"
   "/org/gnome/desktop/wm/keybindings/switch-to-workspace-1": "['<Super>1']"
   "/org/gnome/desktop/wm/keybindings/switch-to-workspace-2": "['<Super>2']"
   "/org/gnome/desktop/wm/keybindings/switch-to-workspace-3": "['<Super>3']"
   "/org/gnome/desktop/wm/keybindings/switch-to-workspace-4": "['<Super>4']"
+  "/org/gnome/desktop/wm/keybindings/switch-to-workspace-5": "['<Super>5']"
+  "/org/gnome/desktop/wm/keybindings/switch-to-workspace-6": "['<Super>6']"
+  "/org/gnome/desktop/wm/keybindings/switch-to-workspace-7": "['<Super>7']"
+  "/org/gnome/desktop/wm/keybindings/switch-to-workspace-8": "['<Super>8']"
+  "/org/gnome/desktop/wm/keybindings/switch-to-workspace-9": "['<Super>9']"
   "/org/gnome/desktop/wm/keybindings/toggle-fullscreen": "['<Super>f']"
   "/org/gnome/shell/keybindings/switch-to-application-1": "@as []"
   "/org/gnome/shell/keybindings/switch-to-application-2": "@as []"
