--- a/ansible/roles/gnome/vars/main.yml
+++ b/ansible/roles/gnome/vars/main.yml
@@ -131,13 +131,17 @@ org_gnome_dconf:
   "/org/gnome/shell/welcome-dialog-last-shown-version": "'43.4'"
   "/org/gnome/shell/app-switcher/current-workspace-only": "true"
   "/org/gnome/shell/extensions/auto-move-windows/application-list": >
-    ['thunderbird.desktop:2',
-    'jetbrains-idea.desktop:3',
-    'signal-desktop.desktop:2',
-    'org.telegram.desktop.desktop:2',
+    ['org.gnome.Weather.desktop:1',
     'org.keepassxc.KeePassXC.desktop:1',
     'org.gnome.Calendar.desktop:1',
-    'com.slack.Slack.desktop:2']
+    'signal-desktop.desktop:2',
+    'org.telegram.desktop.desktop:2',
+    'com.slack.Slack.desktop:2',
+    'org.mozilla.Thunderbird.desktop:2',
+    'firefox.desktop:3',
+    'chromium.desktop:3',
+    'brave-browser.desktop:3',
+    'intellij-idea-ultimate_intellij-idea-ultimate.desktop:4']
   "/org/gnome/shell/extensions/gtile/show-toggle-tiling-alt": "['<Control><Super>KP_Enter']"
   "/org/gnome/shell/extensions/gtile/theme": "'Default'"
   "/org/gnome/shell/keybindings/screenshot": "['<Super>Print']"
