fix: overwrite conflicting gnome hotkeys
ubuntu gnome had more conflicting super+x hotkeys

--- a/ansible/roles/gnome/vars/main.yml
+++ b/ansible/roles/gnome/vars/main.yml
@@ -61,6 +61,26 @@ org_gnome_dconf:
   "/org/gnome/shell/keybindings/switch-to-application-7": "@as []"
   "/org/gnome/shell/keybindings/switch-to-application-8": "@as []"
   "/org/gnome/shell/keybindings/switch-to-application-9": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-hotkey-1": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-hotkey-2": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-hotkey-3": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-hotkey-4": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-hotkey-5": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-hotkey-6": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-hotkey-7": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-hotkey-8": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-hotkey-9": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-hotkey-10": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-shift-hotkey-1": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-shift-hotkey-2": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-shift-hotkey-3": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-shift-hotkey-4": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-shift-hotkey-5": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-shift-hotkey-6": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-shift-hotkey-7": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-shift-hotkey-8": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-shift-hotkey-9": "@as []"
+  "/org/gnome/shell/extensions/dash-to-dock/app-shift-hotkey-10": "@as []"
   "/org/gnome/desktop/wm/preferences/workspace-names": "['Home', 'Kommunikation', 'Arbeit', 'Internet']"
   "/org/gnome/settings-daemon/plugins/media-keys/calculator": "['Calculator']"
   "/org/gnome/settings-daemon/plugins/media-keys/control-center": "['<Shift><Super>p']"
